After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 782302 - suspicious warning with GCC 7 (comparison between pointer and zero character constant)
suspicious warning with GCC 7 (comparison between pointer and zero character ...
Status: RESOLVED FIXED
Product: easytag
Classification: Other
Component: general
2.4.x
Other Linux
: Normal normal
: 2.4
Assigned To: EasyTAG maintainer(s)
EasyTAG maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2017-05-07 21:20 UTC by James Cowgill
Modified: 2017-06-02 05:55 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description James Cowgill 2017-05-07 21:20:09 UTC
I just noticed this while building easytag with GCC 7 and it looks suspicious to me. This is with 2.4.3.

src/browser.c: In function ‘et_browser_select_dir’:
src/browser.c:1074:26: warning: comparison between pointer and zero character constant [-Wpointer-compare]
         if (parts[index] == '\0')
                          ^~
src/browser.c:1074:13: note: did you mean to dereference the pointer?
         if (parts[index] == '\0')
             ^
Comment 1 David King 2017-06-02 05:55:33 UTC
Thanks for the report, this is indeed a bug. I fixed it on master with commit d0c05132e6e32f907044fbe5ebd4fe90888b5010.