Fix comparison against empty string

https://bugzilla.gnome.org/show_bug.cgi?id=782302